Smoke adaptive domain ignores high resolution data. #34721

Closed
opened 2013-03-21 18:22:02 +01:00 by Caleb Jones · 5 comments

%%%--- Operating System, Graphics card ---
OS: Mac OS X Lion (10.7.5)
Processor: 2.66 GHz Intel Core 2 Duo
RAM: 6 GB 800 MHz DDR2 SDRAM
Graphics: ATI Radeon HD 2600 Pro 256 MB

- Blender version with error, and version that worked ---

Broken in 2.66a and 2.65, no adaptive domain before that.

- Short description of error ---

If adaptive domain and high-resolution are both enabled in the smoke simulator, the adaptive domain area is based on the low resolution smoke. Since high resolution behaves differently, parts of the high resolution smoke suddenly vanish as the low resolution smoke dissolves. This is likely more pronounced when "dissolve" is enabled.

(Image "1" is frame 61, image "2" is frame 62. The adaptive domain is shrinking back to the emitter.)

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Create a smoke simulation with adaptive domain, high-res 2, and dissolve 5. Emit the smoke in a burst, and then check near the end of the smoke dissolving.
If you bake from my blend file, the bug occurs on frames 61-62.
%%%

%%%--- Operating System, Graphics card --- OS: Mac OS X Lion (10.7.5) Processor: 2.66 GHz Intel Core 2 Duo RAM: 6 GB 800 MHz DDR2 SDRAM Graphics: ATI Radeon HD 2600 Pro 256 MB - Blender version with error, and version that worked --- Broken in 2.66a and 2.65, no adaptive domain before that. - Short description of error --- If adaptive domain and high-resolution are both enabled in the smoke simulator, the adaptive domain area is based on the low resolution smoke. Since high resolution behaves differently, parts of the high resolution smoke suddenly vanish as the low resolution smoke dissolves. This is likely more pronounced when "dissolve" is enabled. (Image "1" is frame 61, image "2" is frame 62. The adaptive domain is shrinking back to the emitter.) - Steps for others to reproduce the error (preferably based on attached .blend file) --- Create a smoke simulation with adaptive domain, high-res 2, and dissolve 5. Emit the smoke in a burst, and then check near the end of the smoke dissolving. If you bake from my blend file, the bug occurs on frames 61-62. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Daniel, could you please check on this report? Thanks!%%%

%%%Daniel, could you please check on this report? Thanks!%%%
Member

%%%Before I look 2 days into this bug, I would rather have MiikaH take a look at this. He's the adaptive domain expert since he coded it :-)%%%

%%%Before I look 2 days into this bug, I would rather have MiikaH take a look at this. He's the adaptive domain expert since he coded it :-)%%%

%%%Thanks for the report! This is now fixed in r55518.%%%

%%%Thanks for the report! This is now fixed in r55518.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34721
No description provided.