Fix [#34721]: Smoke adaptive domain threshold ignores high resolution data.

In some cases high resolution domain could have higher density than the low resolution counterpart, causing adaptive domain to clip off areas where density is still above domain threshold. Now also high resolution data is used to determine domain bounds.